add skeleton for the alternative algorithm
