# server/api/blueprint.py
@@ -1,5 +1,6 @@
 from flask import Blueprint
 
+from server.api.boost_tic_tac_toe import BoostTicTacToe
 from server.api.tic_tac_toe import TicTacToe
 from server.api.status import Status
 
@@ -7,3 +8,4 @@ v1 = Blueprint('api', __name__, url_prefix='/api')
 
 v1.add_url_rule('/status', view_func=Status.as_view('get-status'))
 v1.add_url_rule('/tic-tac-toe', view_func=TicTacToe.as_view('tic-tac-toe'))
+v1.add_url_rule('/boost-tic-tac-toe', view_func=BoostTicTacToe.as_view('boost-tic-tac-toe'))
